--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://username:password@localhost:5432/birthday_reminder"
+DATABASE_URL="postgresql://birthday_bot:room2010@localhost:5432/birthday_reminder"
 TELEGRAM_BOT_TOKEN="your_telegram_bot_token_here"
 GEMINI_API_KEY="your_gemini_api_key_here"
 NODE_ENV="development"
